2006-02-17  Christopher Faylor  <cgf@timesys.com>

	* path.cc (conv_path_list): Eat empty paths when converting to POSIX.
	(cygwin_conv_to_win32_path): Deal with Cygwin's necessity of adding a
	'/' to the end of a path ending in '.'.

2006-02-16  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Export sigignore and sigset.
	* exceptions.cc (sigset): New function.
	(sigignore): New function.
	* include/cygwin/signal.h (SIG_HOLD): Define.
	(sigignore): Declare.
	(sigset): Declare.
	* include/cygwin/version.h: Bump API minor number to 154.

2006-02-13  Igor Peshansky  <pechtcha@cs.nyu.edu>

	* include/mntent.h: Add missing #include.

2006-02-13  Igor Peshansky  <pechtcha@cs.nyu.edu>

	* gentls_offsets: Fix typo in error message.

2006-02-10  Christopher Faylor  <cgf@timesys.com>

	* fhandler_process.cc (format_process_stat): Use cygwin-derived start
	time even on NT since it is the logical start time of the "process".
	* pinfo.cc (set_myself): Don't set start time when it should have
	already been set previously.

2006-02-10  Brian Ford  <Brian.Ford@FlightSafety.com>

	* times.cc (clock_getres): Use correct conversion from milliseconds to
	seconds/nanoseconds.
	(clock_setres): Use correct conversion to nanoseconds.

2006-02-10  Christopher Faylor  <cgf@timesys.com>

	* external.cc (sync_winenv): Rename from "setup_winenv".  Use same
	mechanism as spawn to determine environment variables which should be
	converted back to windows form.
	(cygwin_internal): Reflect setup_winenv -> sync_winenv name change.
	* include/sys/cygwin.h: Ditto.

2006-02-09  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Only set
	the dirent_get_d_ino flag on filesystems having useful File IDs.
	Add comment explaining why.

2006-02-07  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (handle_to_fn): Accommodate new argument order in call to
	sys_wcstombs.
	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Call sys_wcstombs